--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/xr.loader.js";
+      var loaderUrl = buildUrl + "/x.loader.js";
       var config = {
-        dataUrl: buildUrl + "/xr.data",
-        frameworkUrl: buildUrl + "/xr.framework.js",
-        codeUrl: buildUrl + "/xr.wasm",
+        dataUrl: buildUrl + "/x.data",
+        frameworkUrl: buildUrl + "/x.framework.js",
+        codeUrl: buildUrl + "/x.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Badish",
+        companyName: "DefaultCompany",
         productName: "MensajesWebXR",
         productVersion: "0.1",
       };
