--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         frameworkUrl: buildUrl + "/x.framework.js",
         codeUrl: buildUrl + "/x.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "Badish",
         productName: "MensajesWebXR",
         productVersion: "0.1",
       };
