--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/x.loader.js";
       var config = {
-        dataUrl: buildUrl + "/x.data.gz",
-        frameworkUrl: buildUrl + "/x.framework.js.gz",
-        codeUrl: buildUrl + "/x.wasm.gz",
+        dataUrl: buildUrl + "/x.data",
+        frameworkUrl: buildUrl + "/x.framework.js",
+        codeUrl: buildUrl + "/x.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "BadishMX",
         productName: "MensajesAR",
